fix(hotspots): Removed padding from hotspots to fix misalignment on safari browsers

--- a/css/templates/lune/pages/_product.css
+++ b/css/templates/lune/pages/_product.css
@@ -198,6 +198,7 @@
   text-indent: var(--letter-spacing-3);
   border: 0;
   backface-visibility: hidden;
+  padding: 0;
 }
 
 .lune-product-hotspot-oak {
